
syntax = "proto3";
package moviefinder;
import "common/common.proto";

option java_package = "com.proto.moviefinder";
option java_multiple_files = true;

message MovieRequest {
    string userid = 1;
    common.Genre genre = 2;
}
message MovieResponse {
    common.Movie movie = 1;
}

service MovieFinderService {
    rpc getMovie(MovieRequest) returns (MovieResponse) {};
}